cmake_minimum_required(VERSION 3.16)
project(freebsd-operating_system)


add_subdirectory(operating_system-freebsd/node_freebsd)
add_subdirectory(operating_system-posix/acme_posix)
add_subdirectory(operating_system-darwin/darwin)
add_subdirectory(operating_system-darwin/acme_darwin)
add_subdirectory(operating_system-freebsd/acme_freebsd)
add_subdirectory(operating_system-posix/apex_posix)
add_subdirectory(operating_system-darwin/apex_darwin)
add_subdirectory(operating_system-freebsd/apex_freebsd)
add_subdirectory(operating_system-posix/aura_posix)
add_subdirectory(operating_system-darwin/aura_darwin)
add_subdirectory(operating_system-freebsd/aura_freebsd)

#add_subdirectory(operating_system-posix/nano_dynamic_library_dl)
#add_subdirectory(operating_system-posix/nano_dynamic_library_dl_null)

add_subdirectory(operating_system-posix/nano_compress_command_line)
add_subdirectory(operating_system-posix/nano_http_command_line)
add_subdirectory(operating_system-posix/nano_http_libcurl)

add_subdirectory(operating_system-posix/windowing_posix)
add_subdirectory(operating_system-posix/nano_graphics_cairo)
add_subdirectory(operating_system-posix/acme_windowing_gtk4)
add_subdirectory(operating_system-posix/node_gdk)
#add_subdirectory(operating_system-posix/nano_user_x11)

if(LXDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_gnome)
    add_subdirectory(operating_system-freebsd/desktop_environment_gnome)
endif()
if(XFCE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/node_gtk)
    add_subdirectory(operating_system-posix/node_xfce)
    add_subdirectory(operating_system-freebsd/desktop_environment_xfce)
endif()
if(GNOME_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    if(${HAS_GTK4})
        #add_subdirectory(operating_system-posix/windowing_system_gtk4)
        #add_subdirectory(operating_system-posix/nano_user_gtk4)
        add_subdirectory(operating_system-posix/innate_ui_gtk4)
        add_subdirectory(operating_system-posix/windowing_gtk4)
        add_subdirectory(operating_system-posix/node_gtk4)
    elseif(${HAS_GTK3})
        add_subdirectory(operating_system-posix/node_gtk3)
    endif()
    add_subdirectory(operating_system-posix/node_gtk_based)
    add_subdirectory(operating_system-freebsd/desktop_environment_gtk_based)
endif()
if(KDE_DESKTOP)
    add_subdirectory(operating_system-posix/windowing_x11)
    add_subdirectory(operating_system-posix/windowing_xcb)
    if(HAS_KDE6)
        add_subdirectory(operating_system-posix/node_kde6)
    elseif(HAS_KDE5)
        add_subdirectory(operating_system-posix/node_kde5)
    endif()
    add_subdirectory(operating_system-freebsd/desktop_environment_kde)
endif()


add_subdirectory(operating_system-posix/write_text_pango)
add_subdirectory(operating_system-posix/audio_alsa)
add_subdirectory(operating_system-posix/input_xinput)
#add_subdirectory(operating_system-freebsd/audio_mixer_alsa)
add_subdirectory(operating_system-posix/music_midi_alsa)




